<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.waldo_personal.activities.MainActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_nombre"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Fecha de Nacimiento" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/edittext_telefono"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="146dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/edittext_email"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="216dp" />

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/edittext_descripcion"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSiguiente"
        android:text="@string/boton_siguiente"
        android:theme="@style/MiRaisedButton"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="413dp" />

</LinearLayout>
